Header z-index larger than slider so that slider doesn't overlap; sidebar fixed

--- a/src/ifv/IFVView.less
+++ b/src/ifv/IFVView.less
@@ -4,7 +4,8 @@
   & > row {
     max-width: 100%;
     & > column > fieldset {
-      position: relative;
+      position: fixed;
+      width: 15.5%;
     }
   }
 
