--- a/src/layout/header/index.less
+++ b/src/layout/header/index.less
@@ -8,6 +8,8 @@
   width: 100%;
 
   background-color: #FAFAFA;
+
+  z-index: 50;
   // border-top: 4px solid #333333;
   // border-bottom: 1px solid rgba(0, 0, 0, 0.07);
 
