--- a/src/theme.less
+++ b/src/theme.less
@@ -98,3 +98,7 @@ div > label span {  // Radio buttons text
   padding: 8px;
   width: 100%;
 }
+
+.rc-tooltip, .rc-slider {
+  z-index: 0 !important;
+}
